fix: Fix type login page

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <!-- Login View -->
   <div class="centered-container" id="login-container">
     <div class="login-box">
-      <h2>Demo Web App Login to Dashboard</h2>
+      <h2>Web App Login to Dashboard</h2>
 
       <label for="username">Username</label>
       <input test-id="input-username" type="text" id="username" placeholder="Enter username" />
